--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,8 @@
 ################################################
 ###       environment config file            ###
 ################################################
+# java项目代码存放路径，一般映射在宿主机/app目录下
+JAVA_CODE_PATH=/app/webapps
 # php项目代码存放路径，一般映射在宿主机/app目录下
 CODE_PATH=/app/www
 # 各个服务软件的数据备份，比如mysql、redis等等，防止容器挂后数据不见的问题
@@ -147,3 +149,12 @@ REDISMYADMIN_HOST_PORT=8081
 NODEJS_VERSION=13.2-alpine
 NODEJS_HOST_PORT_3000=3000
 NODEJS_HOST_PORT_8088=8088
+
+################ openjdk #################
+OPENJDK_VERSION=9
+OPENJDK_HOST_PORT_8080=8080
+OPENJDK_HOST_PORT_8081=8081
+OPENJDK_HOST_PORT_8082=8082
+OPENJDK_HOST_PORT_8083=8083
+# openjdk，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
+OPENJDK_MORE_INSTALLER=debian.sh
