--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,4 +1,4 @@
-user www-data;
+user root;
 worker_processes  2;
 
 pid        /var/run/nginx.pid;
@@ -16,9 +16,9 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 20;
+    keepalive_timeout 100;
     types_hash_max_size 2048;
-    client_max_body_size 50M;
+    client_max_body_size 100M;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
