--- a/env.sample
+++ b/env.sample
@@ -49,7 +49,7 @@ NGINX_HTTPS_HOST_PORT=443
 # recode,tidy,gmp,imap,ldap,imagick,sqlsrv,pdo_sqlsrv,opcache,
 # redis,memcached,xdebug,swoole,sodium,yaf,amqp,mongodb,
 # event,rar,ast,yac,yaconf,msgpack,igbinary,seaslog,varnish,
-# xhprof,xlswriter
+# xhprof,xlswriter,rdkafka
 
 #
 # 上面是php一些常规的扩展，如果你需要安装，则用英文的逗号分隔填写在PHP_EXTENSIONS
@@ -74,10 +74,10 @@ PHP_HOST_PORT_18306=18306
 
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
 PHP_MORE_EXTENSION_INSTALLER=alpine.sh
-PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter
+PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,rdkafka
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP_SWOOLE_VERSION=swoole-src-4.4.19.tar.gz
+PHP_SWOOLE_VERSION=swoole-src-4.5.2.tar.gz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP_REPLACE_SOURCE=true
@@ -103,10 +103,10 @@ PHP7_HOST_PORT_18307=18307
 
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
 PHP7_MORE_EXTENSION_INSTALLER=debian.sh
-PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter
+PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,rdkafka
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP7_SWOOLE_VERSION=swoole-src-4.4.19.tar.gz
+PHP7_SWOOLE_VERSION=swoole-src-4.5.2.tar.gz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP7_REPLACE_SOURCE=true
