--- a/docker-compose-openjdk.yml
+++ b/docker-compose-openjdk.yml
@@ -34,6 +34,7 @@ services:
         ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
         OPENJDK_MORE_INSTALLER: ${OPENJDK_MORE_INSTALLER}
+        MAVEN_VERSION: ${MAVEN_VERSION}
     ports:
       - "${OPENJDK_HOST_PORT_8080}:8080"
       - "${OPENJDK_HOST_PORT_8081}:8081"
