--- a/env.sample
+++ b/env.sample
@@ -158,3 +158,4 @@ OPENJDK_HOST_PORT_8082=8082
 OPENJDK_HOST_PORT_8083=8083
 # openjdk，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
 OPENJDK_MORE_INSTALLER=debian.sh
+MAVEN_VERSION=apache-maven-3.6.3-bin.tar.gz
