--- a/env.sample
+++ b/env.sample
@@ -77,7 +77,7 @@ PHP_MORE_EXTENSION_INSTALLER=alpine.sh
 PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,rdkafka
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP_SWOOLE_VERSION=swoole-src-4.5.2.tar.gz
+PHP_SWOOLE_VERSION=swoole-src-4.7.1.tar.gz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP_REPLACE_SOURCE=true
@@ -106,7 +106,7 @@ PHP7_MORE_EXTENSION_INSTALLER=debian.sh
 PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,rdkafka
 
 # PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP7_SWOOLE_VERSION=swoole-src-4.5.2.tar.gz
+PHP7_SWOOLE_VERSION=swoole-src-4.7.1.tar.gz
 
 # 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
 PHP7_REPLACE_SOURCE=true
@@ -117,6 +117,35 @@ PHP7_INSTALL_SUPERVISOR=true
 #debian系统安装阿里oss-sdk
 PHP7_INSTALL_ALIYUN_OSS_SDK=false
 PHP7_ALIYUN_OSS_SDK_VERSION=aliyun-oss-cpp-sdk-1.7.0.tar.gz
+
+#################### PHP8 支持安装多个镜像 ####################
+# 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
+# 如果你用swoole不需要php-fpm的话，可以使用7.3-cli-alpine，如果需要php-fpm则用7.3-fpm-alpine
+# 不再支持5和7.0版本，如果要使用5和7.0可能会有点问题，建议使用7.2以上的版本，性能有大幅度提升，也修复了很多bug
+# php官方镜像主要是根据两种系统来进行打包
+# 1、alpine 2、debian
+# 如果你是常规开发，没有大量用到c标准的一些动态库，建议使用alpine，反之使用debian
+# 例如：使用alpine的则直接在PHP_VERSION中填写7.3-fpm-alpine，如果使用debian则为7.3-fpm
+PHP8_VERSION=8.0.10-fpm
+
+#映射端口
+PHP8_HOST_PORT_9002=9002
+PHP8_HOST_PORT_9505=9505
+PHP8_HOST_PORT_9506=9506
+PHP8_HOST_PORT_18308=18308
+
+# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
+PHP8_MORE_EXTENSION_INSTALLER=debian.sh
+PHP8_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
+
+# PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
+PHP8_SWOOLE_VERSION=swoole-src-4.7.1.tar.gz
+
+# 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
+PHP8_REPLACE_SOURCE=true
+
+# 安装supervisor
+PHP8_INSTALL_SUPERVISOR=true
 
 #################### MySQL #####################
 MYSQL_VERSION=5.7
