1、去掉php大部分压缩包安装扩展的方式 2、优化

--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -35,9 +35,9 @@ services:
         PHP_VERSION: ${PHP_VERSION}
         PHP_EXTENSIONS: ${PHP_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
-        PHP_SWOOLE_VERSION: ${PHP_SWOOLE_VERSION}
         PHP_REPLACE_SOURCE: ${PHP_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP_INSTALL_SUPERVISOR}
+        PHP_INSTALL_EXTENSION_SCRIPT: ${PHP_INSTALL_EXTENSION_SCRIPT}
         TZ: ${TZ}
     ports:
       - "${PHP_HOST_PORT_9000}:9000"
@@ -70,11 +70,11 @@ services:
         PHP_VERSION: ${PHP7_VERSION}
         PHP_EXTENSIONS: ${PHP7_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP7_MORE_EXTENSION_INSTALLER}
-        PHP_SWOOLE_VERSION: ${PHP7_SWOOLE_VERSION}
         PHP_REPLACE_SOURCE: ${PHP7_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP7_INSTALL_SUPERVISOR}
         PHP_INSTALL_ALIYUN_OSS_SDK: ${PHP7_INSTALL_ALIYUN_OSS_SDK}
         PHP_ALIYUN_OSS_SDK_VERSION: ${PHP7_ALIYUN_OSS_SDK_VERSION}
+        PHP_INSTALL_EXTENSION_SCRIPT: ${PHP_INSTALL_EXTENSION_SCRIPT}
         TZ: ${TZ}
     ports:
       - "${PHP7_HOST_PORT_9001}:9001"
@@ -107,9 +107,9 @@ services:
         PHP_VERSION: ${PHP8_VERSION}
         PHP_EXTENSIONS: ${PHP8_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP8_MORE_EXTENSION_INSTALLER}
-        PHP_SWOOLE_VERSION: ${PHP8_SWOOLE_VERSION}
         PHP_REPLACE_SOURCE: ${PHP8_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP8_INSTALL_SUPERVISOR}
+        PHP_INSTALL_EXTENSION_SCRIPT: ${PHP_INSTALL_EXTENSION_SCRIPT}
         TZ: ${TZ}
     ports:
       - "${PHP8_HOST_PORT_9002}:9002"
