--- a/docker-compose-php.yml
+++ b/docker-compose-php.yml
@@ -35,9 +35,9 @@ services:
         PHP_VERSION: ${PHP_VERSION}
         PHP_EXTENSIONS: ${PHP_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
-        PHP_SWOOLE_VERSION: ${PHP_SWOOLE_VERSION}
         PHP_REPLACE_SOURCE: ${PHP_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP_INSTALL_SUPERVISOR}
+        PHP_INSTALL_EXTENSION_SCRIPT: ${PHP_INSTALL_EXTENSION_SCRIPT}
         TZ: ${TZ}
     ports:
       - "${PHP_HOST_PORT_9000}:9000"
