--- a/env.sample
+++ b/env.sample
@@ -31,7 +31,6 @@ DEBIAN_REPOSITORIES_REPLACE=true
 ############# Timezone for the containers ############
 TZ=Asia/Shanghai
 
-
 #################### Nginx #####################
 # nginx版本
 NGINX_VERSION=1.17-alpine
@@ -39,6 +38,12 @@ NGINX_VERSION=1.17-alpine
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
 
+# 不再支持压缩包安装，除非是一些特殊扩展
+# 安装扩展支持的工具有pecl(php官方工具),install-php-extensions(非常好用的扩展安装脚本)，github地址:https://github.com/mlocati/docker-php-extension-installer
+# 默认使用pecl安装，你也可以替换为install-php-extensions
+# 不定期的更新install-php-extensions脚本，你也可以直接到github上面下载覆盖extensions/install-php-extensions
+# 当前install-php-extensions为1.2.60
+PHP_INSTALL_EXTENSION_SCRIPT=install-php-extensions
 
 ############ PHP extensions #################
 # PHP extensions:
@@ -49,7 +54,7 @@ NGINX_HTTPS_HOST_PORT=443
 # recode,tidy,gmp,imap,ldap,imagick,sqlsrv,pdo_sqlsrv,opcache,
 # redis,memcached,xdebug,swoole,sodium,yaf,amqp,mongodb,
 # event,rar,ast,yac,yaconf,msgpack,igbinary,seaslog,varnish,
-# xhprof,xlswriter,rdkafka
+# xhprof,xlswriter,swoole
 
 #
 # 上面是php一些常规的扩展，如果你需要安装，则用英文的逗号分隔填写在PHP_EXTENSIONS
@@ -72,14 +77,11 @@ PHP_HOST_PORT_9501=9501
 PHP_HOST_PORT_9502=9502
 PHP_HOST_PORT_18306=18306
 
-# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
+# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用alpine.sh,反之使用debian.sh
 PHP_MORE_EXTENSION_INSTALLER=alpine.sh
-PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,rdkafka
+PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,swoole,mongodb,xlswriter
 
-# PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP_SWOOLE_VERSION=swoole-src-4.7.1.tar.gz
-
-# 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
+# 是否切换debian的源,debian的源在source目录下,如果是alpine系统则不用管
 PHP_REPLACE_SOURCE=true
 
 # 安装supervisor
@@ -101,14 +103,11 @@ PHP7_HOST_PORT_9503=9503
 PHP7_HOST_PORT_9504=9504
 PHP7_HOST_PORT_18307=18307
 
-# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
+# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用alpine.sh,反之使用debian.sh
 PHP7_MORE_EXTENSION_INSTALLER=debian.sh
-PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,xlswriter,rdkafka
+PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
 
-# PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP7_SWOOLE_VERSION=swoole-src-4.7.1.tar.gz
-
-# 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
+# 是否切换debian的源,debian的源在source目录下,如果是alpine系统则不用管
 PHP7_REPLACE_SOURCE=true
 
 # 安装supervisor
@@ -126,7 +125,7 @@ PHP7_ALIYUN_OSS_SDK_VERSION=aliyun-oss-cpp-sdk-1.7.0.tar.gz
 # 1、alpine 2、debian
 # 如果你是常规开发，没有大量用到c标准的一些动态库，建议使用alpine，反之使用debian
 # 例如：使用alpine的则直接在PHP_VERSION中填写7.3-fpm-alpine，如果使用debian则为7.3-fpm
-PHP8_VERSION=8.0.10-fpm
+PHP8_VERSION=8.0-fpm
 
 #映射端口
 PHP8_HOST_PORT_9002=9002
@@ -134,14 +133,12 @@ PHP8_HOST_PORT_9505=9505
 PHP8_HOST_PORT_9506=9506
 PHP8_HOST_PORT_18308=18308
 
-# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
+# 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用alpine.sh,反之使用debian.sh
 PHP8_MORE_EXTENSION_INSTALLER=debian.sh
-PHP8_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
+#PHP8_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
+PHP8_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,swoole,mongodb,xlswriter
 
-# PHP的SWOOLE扩展版本,如果要更换swoole版本，请把swoole压缩包下载到php/extensions目录，并替换下面的名称
-PHP8_SWOOLE_VERSION=swoole-src-4.7.1.tar.gz
-
-# 是否切换debian的源,debian的源在source目录下,如果是apline系统则不用管
+# 是否切换debian的源,debian的源在source目录下,如果是alpine系统则不用管
 PHP8_REPLACE_SOURCE=true
 
 # 安装supervisor
@@ -153,6 +150,12 @@ MYSQL_HOST_PORT=3306
 # 生产环境请替换密码
 MYSQL_ROOT_PASSWORD=123456
 
+#################### MySQL8 #####################
+MYSQL8_VERSION=8
+MYSQL8_HOST_PORT=3308
+# 生产环境请替换密码
+MYSQL8_ROOT_PASSWORD=123456
+
 #################### MONGODB #####################
 MONGODB_VERSION=4.2
 MONGODB_HOST_PORT=27017
@@ -162,6 +165,7 @@ MONGODB_INITDB_ROOT_PASSWORD=123456
 #################### Redis #####################
 REDIS_VERSION=5.0.3-alpine
 REDIS_HOST_PORT=6379
+REDIS_EXTENSION_VERSION=redis-5.0.2.tgz
 
 #################### RABBITMQ #####################
 RABBITMQ_VERSION=management
@@ -175,7 +179,7 @@ REDISMYADMIN_VERSION=erikdubbelboer/phpredisadmin:latest
 REDISMYADMIN_HOST_PORT=8081
 
 ################# nodejs #################
-NODEJS_VERSION=13.2-alpine
+NODEJS_VERSION=12.8-alpine
 NODEJS_HOST_PORT_3000=3000
 NODEJS_HOST_PORT_8088=8088
 
@@ -185,6 +189,6 @@ OPENJDK_HOST_PORT_8080=8080
 OPENJDK_HOST_PORT_8081=8081
 OPENJDK_HOST_PORT_8082=8082
 OPENJDK_HOST_PORT_8083=8083
-# openjdk，如果是alpine类型的系统，则使用apline.sh,反之使用debian.sh
+# openjdk，如果是alpine类型的系统，则使用alpine.sh,反之使用debian.sh
 OPENJDK_MORE_INSTALLER=debian.sh
 MAVEN_VERSION=apache-maven-3.6.3-bin.tar.gz
