--- a/php8/conf/php.ini
+++ b/php8/conf/php.ini
@@ -1944,3 +1944,6 @@ ldap.max_links = -1
 
 ; List of headers files to preload, wildcard patterns allowed.
 ;ffi.preload=
+
+SERVER_ENV=develop
+swoole.use_shortname='Off'
