新增可以指定swoole版本

--- a/docker-compose-php.yml
+++ b/docker-compose-php.yml
@@ -38,6 +38,7 @@ services:
         PHP_REPLACE_SOURCE: ${PHP_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP_INSTALL_SUPERVISOR}
         PHP_INSTALL_EXTENSION_SCRIPT: ${PHP_INSTALL_EXTENSION_SCRIPT}
+        PHP_SWOOLE_VERSION: ${PHP_SWOOLE_VERSION}
         TZ: ${TZ}
     ports:
       - "${PHP_HOST_PORT_9000}:9000"
