--- a/env.sample
+++ b/env.sample
@@ -87,6 +87,9 @@ PHP_REPLACE_SOURCE=true
 # 安装supervisor
 PHP_INSTALL_SUPERVISOR=true
 
+# 指定swoole版本,如果直接写swoole,不指定则会默认拉取最新的版本.指定版本号则写swoole-4.8.6
+PHP_SWOOLE_VERSION=swoole
+
 #################### PHP7 支持安装多个镜像 ####################
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
 # 如果你用swoole不需要php-fpm的话，可以使用7.3-cli-alpine，如果需要php-fpm则用7.3-fpm-alpine
@@ -113,9 +116,8 @@ PHP7_REPLACE_SOURCE=true
 # 安装supervisor
 PHP7_INSTALL_SUPERVISOR=true
 
-#debian系统安装阿里oss-sdk
-PHP7_INSTALL_ALIYUN_OSS_SDK=false
-PHP7_ALIYUN_OSS_SDK_VERSION=aliyun-oss-cpp-sdk-1.7.0.tar.gz
+# 指定swoole版本,如果直接写swoole,不指定则会默认拉取最新的版本.指定版本号则写swoole-4.8.6
+PHP7_SWOOLE_VERSION=swoole
 
 #################### PHP8 支持安装多个镜像 ####################
 # 支持多个版本，可以查看https://github.com/docker-library/repo-info/tree/master/repos/php/remote
@@ -143,6 +145,9 @@ PHP8_REPLACE_SOURCE=true
 
 # 安装supervisor
 PHP8_INSTALL_SUPERVISOR=true
+
+# 指定swoole版本,如果直接写swoole,不指定则会默认拉取最新的版本.指定版本号则写swoole-4.8.6
+PHP8_SWOOLE_VERSION=swoole
 
 #################### MySQL #####################
 MYSQL_VERSION=5.7
