--- a/php8/Dockerfile
+++ b/php8/Dockerfile
@@ -10,6 +10,7 @@ ARG PHP_MORE_EXTENSION_INSTALLER
 ARG PHP_REPLACE_SOURCE
 ARG PHP_INSTALL_SUPERVISOR
 ARG PHP_INSTALL_EXTENSION_SCRIPT
+ARG PHP_SWOOLE_VERSION
 
 RUN cd /home
 
