--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -38,6 +38,7 @@ services:
         PHP_REPLACE_SOURCE: ${PHP_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP_INSTALL_SUPERVISOR}
         PHP_INSTALL_EXTENSION_SCRIPT: ${PHP_INSTALL_EXTENSION_SCRIPT}
+        PHP_SWOOLE_VERSION: ${PHP_SWOOLE_VERSION}
         TZ: ${TZ}
     ports:
       - "${PHP_HOST_PORT_9000}:9000"
@@ -72,9 +73,8 @@ services:
         PHP_MORE_EXTENSION_INSTALLER: ${PHP7_MORE_EXTENSION_INSTALLER}
         PHP_REPLACE_SOURCE: ${PHP7_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP7_INSTALL_SUPERVISOR}
-        PHP_INSTALL_ALIYUN_OSS_SDK: ${PHP7_INSTALL_ALIYUN_OSS_SDK}
-        PHP_ALIYUN_OSS_SDK_VERSION: ${PHP7_ALIYUN_OSS_SDK_VERSION}
         PHP_INSTALL_EXTENSION_SCRIPT: ${PHP_INSTALL_EXTENSION_SCRIPT}
+        PHP_SWOOLE_VERSION: ${PHP7_SWOOLE_VERSION}
         TZ: ${TZ}
     ports:
       - "${PHP7_HOST_PORT_9001}:9001"
@@ -110,6 +110,7 @@ services:
         PHP_REPLACE_SOURCE: ${PHP8_REPLACE_SOURCE}
         PHP_INSTALL_SUPERVISOR: ${PHP8_INSTALL_SUPERVISOR}
         PHP_INSTALL_EXTENSION_SCRIPT: ${PHP_INSTALL_EXTENSION_SCRIPT}
+        PHP_SWOOLE_VERSION: ${PHP8_SWOOLE_VERSION}
         TZ: ${TZ}
     ports:
       - "${PHP8_HOST_PORT_9002}:9002"
