1、update install-php-extensions version 2、nginx版本改为1.17-alpine->stable-alpine

--- a/env.sample
+++ b/env.sample
@@ -33,7 +33,7 @@ TZ=Asia/Shanghai
 
 #################### Nginx #####################
 # nginx版本
-NGINX_VERSION=1.17-alpine
+NGINX_VERSION=stable-alpine
 # 开放端口
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
@@ -42,7 +42,7 @@ NGINX_HTTPS_HOST_PORT=443
 # 安装扩展支持的工具有pecl(php官方工具),install-php-extensions(非常好用的扩展安装脚本)，github地址:https://github.com/mlocati/docker-php-extension-installer
 # 默认使用pecl安装，你也可以替换为install-php-extensions
 # 不定期的更新install-php-extensions脚本，你也可以直接到github上面下载覆盖extensions/install-php-extensions
-# 当前install-php-extensions为1.2.60
+# 当前install-php-extensions为1.5.8
 PHP_INSTALL_EXTENSION_SCRIPT=install-php-extensions
 
 ############ PHP extensions #################
@@ -127,7 +127,7 @@ PHP7_SWOOLE_VERSION=swoole
 # 1、alpine 2、debian
 # 如果你是常规开发，没有大量用到c标准的一些动态库，建议使用alpine，反之使用debian
 # 例如：使用alpine的则直接在PHP_VERSION中填写7.3-fpm-alpine，如果使用debian则为7.3-fpm
-PHP8_VERSION=8.0-fpm
+PHP8_VERSION=8.1-alpine
 
 #映射端口
 PHP8_HOST_PORT_9002=9002
