--- a/env.sample
+++ b/env.sample
@@ -127,7 +127,7 @@ PHP7_SWOOLE_VERSION=swoole
 # 1、alpine 2、debian
 # 如果你是常规开发，没有大量用到c标准的一些动态库，建议使用alpine，反之使用debian
 # 例如：使用alpine的则直接在PHP_VERSION中填写7.3-fpm-alpine，如果使用debian则为7.3-fpm
-PHP8_VERSION=8.1-alpine
+PHP8_VERSION=8.1-fpm
 
 #映射端口
 PHP8_HOST_PORT_9002=9002
