--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -2,7 +2,6 @@ user root;
 worker_processes  2;
 
 pid        /var/run/nginx.pid;
-error_log  /var/log/nginx/nginx.error.log;
 
 events {
     use epoll;
@@ -10,21 +9,18 @@ events {
     worker_connections  65535;
 }
 
-
+# 设置为跟你系统ulimit -n 一样
+worker_rlimit_nofile 65535;
 http {
     server_tokens off;
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 100;
+    keepalive_timeout 60;
     types_hash_max_size 2048;
-    client_max_body_size 100M;
+    client_max_body_size 50M;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /dev/stdout;
     error_log /dev/stderr;
