--- a/docker-compose-openjdk.yml
+++ b/docker-compose-openjdk.yml
@@ -33,6 +33,7 @@ services:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
         ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES: ${DEBIAN_REPOSITORIES}
         OPENJDK_MORE_INSTALLER: ${OPENJDK_MORE_INSTALLER}
         MAVEN_VERSION: ${MAVEN_VERSION}
     ports:
