--- a/docker-compose-php.yml
+++ b/docker-compose-php.yml
@@ -32,6 +32,7 @@ services:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
         ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES: ${DEBIAN_REPOSITORIES}
         PHP_VERSION: ${PHP_VERSION}
         PHP_EXTENSIONS: ${PHP_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
