--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -32,6 +32,7 @@ services:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
         ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES: ${DEBIAN_REPOSITORIES}
         PHP_VERSION: ${PHP_VERSION}
         PHP_EXTENSIONS: ${PHP_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP_MORE_EXTENSION_INSTALLER}
@@ -68,6 +69,7 @@ services:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
         ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES: ${DEBIAN_REPOSITORIES}
         PHP_VERSION: ${PHP7_VERSION}
         PHP_EXTENSIONS: ${PHP7_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP7_MORE_EXTENSION_INSTALLER}
@@ -104,6 +106,7 @@ services:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
         ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES: ${DEBIAN_REPOSITORIES}
         PHP_VERSION: ${PHP8_VERSION}
         PHP_EXTENSIONS: ${PHP8_EXTENSIONS}
         PHP_MORE_EXTENSION_INSTALLER: ${PHP8_MORE_EXTENSION_INSTALLER}
@@ -281,6 +284,7 @@ services:
         ALPINE_REPOSITORIES: ${ALPINE_REPOSITORIES}
         ALPINE_REPOSITORIES_REPLACE: ${ALPINE_REPOSITORIES_REPLACE}
         DEBIAN_REPOSITORIES_REPLACE: ${DEBIAN_REPOSITORIES_REPLACE}
+        DEBIAN_REPOSITORIES: ${DEBIAN_REPOSITORIES}
         OPENJDK_MORE_INSTALLER: ${OPENJDK_MORE_INSTALLER}
     ports:
       - "${OPENJDK_HOST_PORT_8080}:8080"
