--- a/env.sample
+++ b/env.sample
@@ -27,6 +27,8 @@ ALPINE_REPOSITORIES=mirrors.aliyun.com
 
 #################### DEBIAN ####################
 DEBIAN_REPOSITORIES_REPLACE=true
+# debian的源，默认用阿里的源，支持清华源mirrors.tuna.tsinghua.edu.cn、阿里云源mirrors.aliyun.com、163源mirrors.163.com、腾讯云源mirrors.cloud.tencent.com
+DEBIAN_REPOSITORIES_URL=mirrors.aliyun.com
 
 ############# Timezone for the containers ############
 TZ=Asia/Shanghai
