--- a/openjdk/Dockerfile
+++ b/openjdk/Dockerfile
@@ -5,6 +5,7 @@ ARG TZ
 ARG ALPINE_REPOSITORIES
 ARG ALPINE_REPOSITORIES_REPLACE
 ARG DEBIAN_REPOSITORIES_REPLACE
+ARG DEBIAN_REPOSITORIES
 ARG OPENJDK_MORE_INSTALLER
 ARG MAVEN_VERSION
 
