--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -5,6 +5,7 @@ ARG TZ
 ARG ALPINE_REPOSITORIES
 ARG ALPINE_REPOSITORIES_REPLACE
 ARG DEBIAN_REPOSITORIES_REPLACE
+ARG DEBIAN_REPOSITORIES
 ARG PHP_EXTENSIONS
 ARG PHP_MORE_EXTENSION_INSTALLER
 ARG PHP_REPLACE_SOURCE
