--- a/env.sample
+++ b/env.sample
@@ -23,11 +23,12 @@ LOG_PATH=/app/log
 #
 # Alpine Repositories
 ALPINE_REPOSITORIES_REPLACE=true
+# alpine的源，默认用阿里的源，支持清华源mirrors.tuna.tsinghua.edu.cn、阿里云源mirrors.aliyun.com、163源mirrors.163.com、腾讯云源mirrors.cloud.tencent.com,你也可以找别的源
 ALPINE_REPOSITORIES=mirrors.aliyun.com
 
 #################### DEBIAN ####################
 DEBIAN_REPOSITORIES_REPLACE=true
-# debian的源，默认用阿里的源，支持清华源mirrors.tuna.tsinghua.edu.cn、阿里云源mirrors.aliyun.com、163源mirrors.163.com、腾讯云源mirrors.cloud.tencent.com
+# debian的源，默认用清华的源，感觉比阿里源稳定。。。，支持清华源mirrors.tuna.tsinghua.edu.cn、阿里云源mirrors.aliyun.com、163源mirrors.163.com、腾讯云源mirrors.cloud.tencent.com
 DEBIAN_REPOSITORIES_URL=mirrors.aliyun.com
 
 ############# Timezone for the containers ############
