默认使用清华源

--- a/env.sample
+++ b/env.sample
@@ -29,7 +29,7 @@ ALPINE_REPOSITORIES=mirrors.aliyun.com
 #################### DEBIAN ####################
 DEBIAN_REPOSITORIES_REPLACE=true
 # debian的源，默认用清华的源，感觉比阿里源稳定。。。，支持清华源mirrors.tuna.tsinghua.edu.cn、阿里云源mirrors.aliyun.com、163源mirrors.163.com、腾讯云源mirrors.cloud.tencent.com
-DEBIAN_REPOSITORIES_URL=mirrors.aliyun.com
+DEBIAN_REPOSITORIES_URL=mirrors.tuna.tsinghua.edu.cn
 
 ############# Timezone for the containers ############
 TZ=Asia/Shanghai
