php扩展默认加上event

--- a/env.sample
+++ b/env.sample
@@ -81,7 +81,7 @@ PHP_HOST_PORT_18306=18306
 
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用alpine.sh,反之使用debian.sh
 PHP_MORE_EXTENSION_INSTALLER=alpine.sh
-PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,swoole,mongodb,xlswriter
+PHP_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,swoole,mongodb,xlswriter,event
 
 # 是否切换debian的源,debian的源在source目录下,如果是alpine系统则不用管
 PHP_REPLACE_SOURCE=true
@@ -110,7 +110,7 @@ PHP7_HOST_PORT_18307=18307
 
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用alpine.sh,反之使用debian.sh
 PHP7_MORE_EXTENSION_INSTALLER=debian.sh
-PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
+PHP7_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb,event
 
 # 是否切换debian的源,debian的源在source目录下,如果是alpine系统则不用管
 PHP7_REPLACE_SOURCE=true
@@ -140,7 +140,7 @@ PHP8_HOST_PORT_18308=18308
 # 安装更多的PHP扩展脚本，如果是alpine类型的系统，则使用alpine.sh,反之使用debian.sh
 PHP8_MORE_EXTENSION_INSTALLER=debian.sh
 #PHP8_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,xlswriter,swoole,mongodb
-PHP8_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,swoole,mongodb,xlswriter
+PHP8_EXTENSIONS=pdo_mysql,redis,pcntl,mysqli,bcmath,sockets,sysvmsg,sysvsem,sysvshm,zip,gd,bz2,memcached,amqp,swoole,mongodb,xlswriter,event
 
 # 是否切换debian的源,debian的源在source目录下,如果是alpine系统则不用管
 PHP8_REPLACE_SOURCE=true
