--- a/env.sample
+++ b/env.sample
@@ -199,3 +199,29 @@ OPENJDK_HOST_PORT_8083=8083
 # openjdk，如果是alpine类型的系统，则使用alpine.sh,反之使用debian.sh
 OPENJDK_MORE_INSTALLER=debian.sh
 MAVEN_VERSION=apache-maven-3.6.3-bin.tar.gz
+
+### POSTGRES ##############################################
+POSTGRES_VERSION=alpine
+POSTGRES_DB=default
+POSTGRES_USER=default
+POSTGRES_PASSWORD=123456
+POSTGRES_PORT=5432
+
+### POSTGRES-POSTGIS ##############################################
+POSTGIS_VERSION=latest
+POSTGIS_INSTALL_PGSQL_HTTP_FOR_POSTGIS13=false
+
+### SONARQUBE ################################################
+## docker-compose up -d sonarqube
+## (If you encounter a database error)
+## docker-compose exec --user=root postgres
+## source docker-entrypoint-initdb.d/init_sonarqube_db.sh
+## (If you encounter logs error)
+## docker-compose run --user=root --rm sonarqube chown sonarqube:sonarqube /opt/sonarqube/logs
+SONARQUBE_VERSION=latest
+SONARQUBE_PORT=9000
+SONARQUBE_POSTGRES_INIT=true
+SONARQUBE_POSTGRES_HOST=postgres
+SONARQUBE_POSTGRES_DB=sonar
+SONARQUBE_POSTGRES_USER=sonar
+SONARQUBE_POSTGRES_PASSWORD=123456
