--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -301,5 +301,71 @@ services:
     networks:
       - dcnmp
 
+  ### PostgreSQL ###########################################
+  postgres:
+    build:
+      context: postgres
+      args:
+        - POSTGRES_VERSION=${POSTGRES_VERSION}
+    volumes:
+      - ${DATA_PATH}/postgres:/var/lib/postgresql/data
+      - ${CONF_PATH}/postgres/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+    restart: always
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - SONARQUBE_POSTGRES_INIT=${SONARQUBE_POSTGRES_INIT}
+      - SONARQUBE_POSTGRES_DB=${SONARQUBE_POSTGRES_DB}
+      - SONARQUBE_POSTGRES_USER=${SONARQUBE_POSTGRES_USER}
+      - SONARQUBE_POSTGRES_PASSWORD=${SONARQUBE_POSTGRES_PASSWORD}
+    networks:
+      - dcnmp
+
+  ### PostgreSQL PostGis ###################################
+  postgres-postgis:
+    build:
+      context: postgres-postgis
+      args:
+        - POSTGIS_VERSION=${POSTGIS_VERSION}
+        - INSTALL_PGSQL_HTTP_FOR_POSTGIS13=${POSTGIS_INSTALL_PGSQL_HTTP_FOR_POSTGIS13}
+    volumes:
+      - ${DATA_PATH}/postgres:/var/lib/postgresql/data
+    restart: always
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    networks:
+      - dcnmp
+
+  ### SONARQUBE ################################################
+  sonarqube:
+    build:
+      context: sonarqube
+      args:
+        - SONARQUBE_VERSION=${SONARQUBE_VERSION}
+    volumes:
+      - ${DATA_PATH}/sonarqube/conf:/opt/sonarqube/conf
+      - ${DATA_PATH}/sonarqube/data:/opt/sonarqube/data
+      - ${DATA_PATH}/sonarqube/logs:/opt/sonarqube/logs
+      - ${DATA_PATH}/sonarqube/extensions:/opt/sonarqube/extensions
+      - ${DATA_PATH}/sonarqube/plugins:/opt/sonarqube/lib/bundled-plugins
+    restart: always
+    ports:
+      - ${SONARQUBE_PORT}:9000
+    depends_on:
+      - postgres
+    environment:
+      - sonar.jdbc.username=${SONARQUBE_POSTGRES_USER}
+      - sonar.jdbc.password=${SONARQUBE_POSTGRES_PASSWORD}
+      - sonar.jdbc.url=jdbc:postgresql://${SONARQUBE_POSTGRES_HOST}:5432/${SONARQUBE_POSTGRES_DB}
+    networks:
+      - dcnmp
+
 networks:
   dcnmp:
