--- a/env.sample
+++ b/env.sample
@@ -170,9 +170,8 @@ MONGODB_INITDB_ROOT_USERNAME=root
 MONGODB_INITDB_ROOT_PASSWORD=123456
 
 #################### Redis #####################
-REDIS_VERSION=5.0.3-alpine
+REDIS_VERSION=5.0-alpine
 REDIS_HOST_PORT=6379
-REDIS_EXTENSION_VERSION=redis-5.0.2.tgz
 
 #################### RABBITMQ #####################
 RABBITMQ_VERSION=management
@@ -225,3 +224,33 @@ SONARQUBE_POSTGRES_HOST=postgres
 SONARQUBE_POSTGRES_DB=sonar
 SONARQUBE_POSTGRES_USER=sonar
 SONARQUBE_POSTGRES_PASSWORD=123456
+
+### GITLAB ###############################################
+GITLAB_VERSION=latest
+GITLAB_POSTGRES_INIT=true
+GITLAB_HOST_HTTP_PORT=8989
+GITLAB_HOST_HTTPS_PORT=9898
+GITLAB_HOST_SSH_PORT=2289
+GITLAB_DOMAIN_NAME=http://localhost
+GITLAB_ROOT_PASSWORD=dcnmp123456
+
+# gitlab有自带的Redis，如果用自带的redis，则设置为true，不用自带的redis，用自己搭建的外部redis，则设置为false
+GITLAB_REDIS_ENABLE=false
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DATABASE=8
+
+# gitlab有自带的postgres，如果用自带的postgres，则设置为true，不用自带的postgres，用自己搭建的外部postgres，则设置为false
+GITLAB_POSTGRES_ENABLE=false
+GITLAB_POSTGRES_INIT=true
+GITLAB_POSTGRES_HOST=postgres
+GITLAB_POSTGRES_USER=gitlab
+GITLAB_POSTGRES_DB=gitlab
+GITLAB_POSTGRES_PASSWORD=123456
+
+### GITLAB-RUNNER ###############################################
+GITLAB_RUNNER_VERSION=latest
+# 如果gitlab和gitlab-runner部署在同一个机器，则直接使用gitlab容器名即可，如果不是同一个机器，请改为http://ip:port的方式
+GITLAB_CI_SERVER_URL=http://gitlab
+GITLAB_RUNNER_REGISTRATION_TOKEN="可以在runnner页面看到，或者创建的仓库里面也有"
+GITLAB_REGISTER_NON_INTERACTIVE=true
