--- a/docker-compose-gitlab-sample.yml
+++ b/docker-compose-gitlab-sample.yml
@@ -151,5 +151,23 @@ services:
     networks:
       - dcnmp
 
+  nexus3:
+    container_name: dcnmp_nexus3
+    build:
+      context: nexus3
+      args:
+        - NEXUS3_VERSION=${NEXUS3_VERSION}
+        - NEXUS3_REPOSITORY_COMPOSER_VERSION=${NEXUS3_REPOSITORY_COMPOSER_VERSION}
+    environment:
+      - TZ=${TZ}
+      - "INSTALL4J_ADD_VM_PARAMS=-Xmx1024m -Xms1024m -XX:MaxDirectMemorySize=512m -Djava.util.prefs.userRoot=/nexus-data/javaprefs"
+    volumes:
+      - ${DATA_PATH}/nexus3:/nexus-data
+    ports:
+      - "${NEXUS3_PORT}:8081"
+    restart: always
+    networks:
+      - dcnmp
+
 networks:
   dcnmp:
