新增harbor postgres数据库初始化

--- a/docker-compose-sonarqube-sample.yml
+++ b/docker-compose-sonarqube-sample.yml
@@ -69,6 +69,10 @@ services:
       - GITLAB_POSTGRES_USER=${GITLAB_POSTGRES_USER}
       - GITLAB_POSTGRES_PASSWORD=${GITLAB_POSTGRES_PASSWORD}
       - GITLAB_POSTGRES_DB=${GITLAB_POSTGRES_DB}
+      - HARBOR_POSTGRES_INIT=${HARBOR_POSTGRES_INIT}
+      - HARBOR_POSTGRES_USER=${HARBOR_POSTGRES_USER}
+      - HARBOR_POSTGRES_PASSWORD=${HARBOR_POSTGRES_PASSWORD}
+      - HARBOR_POSTGRES_DB=${HARBOR_POSTGRES_DB}
     networks:
       - dcnmp
 
