--- a/env.sample
+++ b/env.sample
@@ -206,6 +206,13 @@ POSTGRES_USER=default
 POSTGRES_PASSWORD=123456
 POSTGRES_PORT=5432
 
+### HARBOR POSTGRES INIT ###############################################
+HARBOR_POSTGRES_INIT=true
+HARBOR_POSTGRES_HOST=postgres
+HARBOR_POSTGRES_DB=harbor
+HARBOR_POSTGRES_USER=harbor
+HARBOR_POSTGRES_PASSWORD=123456
+
 ### POSTGRES-POSTGIS ##############################################
 POSTGIS_VERSION=latest
 POSTGIS_INSTALL_PGSQL_HTTP_FOR_POSTGIS13=false
