新增harbor postgres数据库初始化

--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -330,6 +330,14 @@ services:
       - HARBOR_POSTGRES_USER=${HARBOR_POSTGRES_USER}
       - HARBOR_POSTGRES_PASSWORD=${HARBOR_POSTGRES_PASSWORD}
       - HARBOR_POSTGRES_DB=${HARBOR_POSTGRES_DB}
+      - HARBOR_POSTGRES_NOTARY_SIGNER_INIT=${HARBOR_POSTGRES_NOTARY_SIGNER_INIT}
+      - HARBOR_POSTGRES_NOTARY_SIGNER_USER=${HARBOR_POSTGRES_NOTARY_SIGNER_USER}
+      - HARBOR_POSTGRES_NOTARY_SIGNER_PASSWORD=${HARBOR_POSTGRES_NOTARY_SIGNER_PASSWORD}
+      - HARBOR_POSTGRES_NOTARY_SIGNER_DB=${HARBOR_POSTGRES_NOTARY_SIGNER_DB}
+      - HARBOR_POSTGRES_NOTARY_SERVER_INIT=${HARBOR_POSTGRES_NOTARY_SERVER_INIT}
+      - HARBOR_POSTGRES_NOTARY_SERVER_USER=${HARBOR_POSTGRES_NOTARY_SERVER_USER}
+      - HARBOR_POSTGRES_NOTARY_SERVER_PASSWORD=${HARBOR_POSTGRES_NOTARY_SERVER_PASSWORD}
+      - HARBOR_POSTGRES_NOTARY_SERVER_DB=${HARBOR_POSTGRES_NOTARY_SERVER_DB}
     networks:
       - dcnmp
 
