--- a/env.sample
+++ b/env.sample
@@ -213,6 +213,18 @@ HARBOR_POSTGRES_DB=harbor
 HARBOR_POSTGRES_USER=harbor
 HARBOR_POSTGRES_PASSWORD=123456
 
+### HARBOR NOTARY SIGNER POSTGRES INIT ###############################################
+HARBOR_POSTGRES_NOTARY_SIGNER_INIT=true
+HARBOR_POSTGRES_NOTARY_SIGNER_DB=notary_signer
+HARBOR_POSTGRES_NOTARY_SIGNER_USER=notary_signer
+HARBOR_POSTGRES_NOTARY_SIGNER_PASSWORD=123456
+
+### HARBOR NOTARY SERVER POSTGRES INIT ###############################################
+HARBOR_POSTGRES_NOTARY_SERVER_INIT=true
+HARBOR_POSTGRES_NOTARY_SERVER_DB=notary_server
+HARBOR_POSTGRES_NOTARY_SERVER_USER=notary_server
+HARBOR_POSTGRES_NOTARY_SERVER_PASSWORD=123456
+
 ### POSTGRES-POSTGIS ##############################################
 POSTGIS_VERSION=latest
 POSTGIS_INSTALL_PGSQL_HTTP_FOR_POSTGIS13=false
