--- a/env.sample
+++ b/env.sample
@@ -250,8 +250,19 @@ GITLAB_POSTGRES_INIT=true
 GITLAB_HOST_HTTP_PORT=8989
 GITLAB_HOST_HTTPS_PORT=9898
 GITLAB_HOST_SSH_PORT=2289
+GITLAB_HOST_NOTICE_PORT=8929
 GITLAB_DOMAIN_NAME=http://localhost
 GITLAB_ROOT_PASSWORD=dcnmp123456
+
+### GITLAB JH ###############################################
+GITLAB_JH_VERSION=15.9.3
+GITLAB_JH_POSTGRES_INIT=true
+GITLAB_JH_HOST_HTTP_PORT=8000
+GITLAB_JH_HOST_HTTPS_PORT=8443
+GITLAB_JH_HOST_SSH_PORT=2290
+GITLAB_JH_HOST_NOTICE_PORT=8939
+GITLAB_JH_DOMAIN_NAME=http://localhost
+GITLAB_JH_ROOT_PASSWORD=dcnmp123456
 
 # gitlab有自带的Redis，如果用自带的redis，则设置为true，不用自带的redis，用自己搭建的外部redis，则设置为false
 GITLAB_REDIS_ENABLE=false
@@ -267,6 +278,20 @@ GITLAB_POSTGRES_USER=gitlab
 GITLAB_POSTGRES_DB=gitlab
 GITLAB_POSTGRES_PASSWORD=123456
 
+# gitlab-jh有自带的Redis，如果用自带的redis，则设置为true，不用自带的redis，用自己搭建的外部redis，则设置为false
+GITLAB_JH_REDIS_ENABLE=false
+REDIS_JH_HOST=redis
+REDIS_JH_PORT=6379
+REDIS_JH_DATABASE=7
+
+# gitlab-jh有自带的postgres，如果用自带的postgres，则设置为true，不用自带的postgres，用自己搭建的外部postgres，则设置为false
+GITLAB_JH_POSTGRES_ENABLE=false
+GITLAB_JH_POSTGRES_INIT=true
+GITLAB_JH_POSTGRES_HOST=postgres
+GITLAB_JH_POSTGRES_USER=gitlab_jh
+GITLAB_JH_POSTGRES_DB=gitlab_jh
+GITLAB_JH_POSTGRES_PASSWORD=123456
+
 ### GITLAB-RUNNER ###############################################
 GITLAB_RUNNER_VERSION=latest
 # 如果gitlab和gitlab-runner部署在同一个机器，则直接使用gitlab容器名即可，如果不是同一个机器，请改为http://ip:port的方式
@@ -281,3 +306,12 @@ NEXUS3_VERSION=3.38.1
 NEXUS3_PORT=8090
 # 安装支持php依赖的composer仓库格式的插件，https://github.com/sonatype-nexus-community/nexus-repository-composer
 NEXUS3_REPOSITORY_COMPOSER_VERSION=0.0.24
+
+### JENKINS ###############################################
+JENKINS_VERSION=lts-jdk17
+JENKINS_HTTP_PORT=9999
+JENKINS_PORT_50000=50000
+# jenkins容器里面可能会用到docker，该变量配置为你宿主机的docker.sock的路径
+JENKINS_HOST_DOCKER_DOCK=/var/run/docker.sock
+# 宿主机docker运行的执行文件路径
+JENKINS_HOST_DOCKER_PATH=/usr/bin/docker
