--- a/env.sample
+++ b/env.sample
@@ -44,7 +44,7 @@ NGINX_HTTPS_HOST_PORT=443
 # 安装扩展支持的工具有pecl(php官方工具),install-php-extensions(非常好用的扩展安装脚本)，github地址:https://github.com/mlocati/docker-php-extension-installer
 # 默认使用pecl安装，你也可以替换为install-php-extensions
 # 不定期的更新install-php-extensions脚本，你也可以直接到github上面下载覆盖extensions/install-php-extensions
-# 当前install-php-extensions为1.5.8
+# 当前install-php-extensions为v2.1.10
 PHP_INSTALL_EXTENSION_SCRIPT=install-php-extensions
 
 ############ PHP extensions #################
@@ -255,7 +255,7 @@ GITLAB_DOMAIN_NAME=http://localhost
 GITLAB_ROOT_PASSWORD=dcnmp123456
 
 ### GITLAB JH ###############################################
-GITLAB_JH_VERSION=15.9.3
+GITLAB_JH_VERSION=latest
 GITLAB_JH_POSTGRES_INIT=true
 GITLAB_JH_HOST_HTTP_PORT=8000
 GITLAB_JH_HOST_HTTPS_PORT=8443
