--- a/env.sample
+++ b/env.sample
@@ -254,16 +254,6 @@ GITLAB_HOST_NOTICE_PORT=8929
 GITLAB_DOMAIN_NAME=http://localhost
 GITLAB_ROOT_PASSWORD=dcnmp123456
 
-### GITLAB JH ###############################################
-GITLAB_JH_VERSION=latest
-GITLAB_JH_POSTGRES_INIT=true
-GITLAB_JH_HOST_HTTP_PORT=8000
-GITLAB_JH_HOST_HTTPS_PORT=8443
-GITLAB_JH_HOST_SSH_PORT=2290
-GITLAB_JH_HOST_NOTICE_PORT=8939
-GITLAB_JH_DOMAIN_NAME=http://localhost
-GITLAB_JH_ROOT_PASSWORD=dcnmp123456
-
 # gitlab有自带的Redis，如果用自带的redis，则设置为true，不用自带的redis，用自己搭建的外部redis，则设置为false
 GITLAB_REDIS_ENABLE=false
 REDIS_HOST=redis
@@ -277,6 +267,16 @@ GITLAB_POSTGRES_HOST=postgres
 GITLAB_POSTGRES_USER=gitlab
 GITLAB_POSTGRES_DB=gitlab
 GITLAB_POSTGRES_PASSWORD=123456
+
+### GITLAB JH ###############################################
+GITLAB_JH_VERSION=latest
+GITLAB_JH_POSTGRES_INIT=true
+GITLAB_JH_HOST_HTTP_PORT=8000
+GITLAB_JH_HOST_HTTPS_PORT=8443
+GITLAB_JH_HOST_SSH_PORT=2290
+GITLAB_JH_HOST_NOTICE_PORT=8939
+GITLAB_JH_DOMAIN_NAME=http://localhost
+GITLAB_JH_ROOT_PASSWORD=dcnmp123456
 
 # gitlab-jh有自带的Redis，如果用自带的redis，则设置为true，不用自带的redis，用自己搭建的外部redis，则设置为false
 GITLAB_JH_REDIS_ENABLE=false
@@ -293,7 +293,7 @@ GITLAB_JH_POSTGRES_DB=gitlab_jh
 GITLAB_JH_POSTGRES_PASSWORD=123456
 
 ### GITLAB-RUNNER ###############################################
-GITLAB_RUNNER_VERSION=latest
+GITLAB_RUNNER_VERSION=alpine-v15.10.0
 # 如果gitlab和gitlab-runner部署在同一个机器，则直接使用gitlab容器名即可，如果不是同一个机器，请改为http://ip:port的方式
 GITLAB_CI_SERVER_URL=http://gitlab
 GITLAB_RUNNER_REGISTRATION_TOKEN="可以在runnner页面看到，或者创建的仓库里面也有"
@@ -302,10 +302,10 @@ GITLAB_REGISTER_NON_INTERACTIVE=true
 ### NEXUS3 ###############################################
 # nexus3默认的admin登录密码必须要进入nexus容器才能知道
 # docker exec -it 容器id bash  && cat cat /opt/sonatype/sonatype-work/nexus/admin.password
-NEXUS3_VERSION=3.38.1
+NEXUS3_VERSION=latest
 NEXUS3_PORT=8090
 # 安装支持php依赖的composer仓库格式的插件，https://github.com/sonatype-nexus-community/nexus-repository-composer
-NEXUS3_REPOSITORY_COMPOSER_VERSION=0.0.24
+NEXUS3_REPOSITORY_COMPOSER_VERSION=0.0.29
 
 ### JENKINS ###############################################
 JENKINS_VERSION=lts-jdk17
