--- a/env.sample
+++ b/env.sample
@@ -301,7 +301,7 @@ GITLAB_REGISTER_NON_INTERACTIVE=true
 ### NEXUS3 ###############################################
 # nexus3默认的admin登录密码必须要进入nexus容器才能知道
 # docker exec -it 容器id bash  && cat cat /opt/sonatype/sonatype-work/nexus/admin.password
-NEXUS3_VERSION=latest
+NEXUS3_VERSION=3.40.1
 NEXUS3_PORT=8090
 # 安装支持php依赖的composer仓库格式的插件，https://github.com/sonatype-nexus-community/nexus-repository-composer
 NEXUS3_REPOSITORY_COMPOSER_VERSION=0.0.29
