--- a/env.sample
+++ b/env.sample
@@ -314,3 +314,13 @@ JENKINS_PORT_50000=50000
 JENKINS_HOST_DOCKER_DOCK=/var/run/docker.sock
 # 宿主机docker运行的执行文件路径
 JENKINS_HOST_DOCKER_PATH=/usr/bin/docker
+
+
+### bitwarden_rs ###############################################
+# 这是一款开源的密码存放，跟1password差不多，很好用
+# 非官方开源地址：https://github.com/dani-garcia/vaultwarden
+# 官方的开源地址：https://github.com/bitwarden/server
+# 个人和家庭使用bitwarden_rs比较好，依赖少，性能强。公司的话还是直接购买saas的服务，不贵
+VAULTWARDEN_VERSION=latest
+VAULTWARDEN_HTTP_PORT=8077
+VAULTWARDEN_HTTP_PORT_3012=3012
