--- a/docker-compose-jenkins.yml
+++ b/docker-compose-jenkins.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   jenkins:
-    container_name: jenkins
+    container_name: dcnmp_jenkins
     build:
       context: jenkins
       args:
